# sample_project

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-APACHE.txt  LICENSE-MIT.txt  LICENSE.txt  NOTICE.txt  README.md  ThirdPartyNotices.txt  vcpkg.json
.github/workflows/: ci.yml  codeql.yml
cmake/: CharAsUtf8.cmake  ExportHeader.cmake  GTest.cmake  PlatformDefinition.cmake  StrictCompilerChecks.cmake
libraries/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/core/include/core/error_handling/: assertions.h  suppressions.h
libraries/core/include/core/helpers/: assertions.h  non_copiable.h  platforms.h  releasable.h
libraries/core/include/core/logging/: logger.h  logger_controller.h  logger_provider.h
libraries/core/include/core/logging/doubles/: logger_double.h
libraries/core/include/core/logging/mocks/: logger_controller_mock.h  logger_mock.h
libraries/core/include/core/objects/: non_copiable.h  object.h  releasable.h
libraries/core/sources/logging/: logger_controller_impl.cpp  logger_controller_impl.h  logger_impl.cpp  logger_impl.h
libraries/core/tests/: CMakeLists.txt
libraries/core/tests/logging/: logger_controller_tests.cpp
libraries/core/tests/unit/: CMakeLists.txt
libraries/core/tests/unit/logging/: logger_tests.cpp
libraries/filesystem/: CMakeLists.txt
libraries/filesystem/include/filesystem/directory_watcher/: directory_watcher.h  directory_watcher_factory.h
libraries/filesystem/include/filesystem/directory_watcher/mocks/: directory_watcher_factory_mock.h
libraries/filesystem/sources/directory_watcher/: directory_watcher_factory_impl.cpp  directory_watcher_factory_impl.h
libraries/filesystem/sources/directory_watcher/detail/: directory_watcher_impl.h
libraries/filesystem/sources/directory_watcher/detail/linux/: directory_watcher_impl.h
libraries/filesystem/sources/directory_watcher/detail/macos/: directory_watcher_impl.h
libraries/filesystem/sources/directory_watcher/detail/windows/: directory_watcher_impl.h
libraries/filesystem/tests/: CMakeLists.txt
libraries/filesystem/tests/directory_watcher/: directory_watcher_factory_tests.cpp
libraries/filesystem/tests/memory/: CMakeLists.txt
libraries/filesystem/tests/memory/directory_watcher/: directory_watcher_factory_tests.cpp
libraries/filesystem/tests/unit/: CMakeLists.txt
libraries/filesystem/tests/unit/directory_watcher/: directory_watcher_factory_tests.cpp
libraries/platform/: CMakeLists.txt
libraries/platform/include/platform/text/: text_converter.h
libraries/platform/sources/linux/text/: text_converter.cpp
libraries/platform/sources/windows/text/: text_converter.cpp
