add_library(filesystem STATIC)
generate_export_header(filesystem)
target_include_directories(core
PUBLIC
    "${CMAKE_CURRENT_LIST_DIR}/include"
    "${CMAKE_CURRENT_BINARY_DIR}"
)
target_link_libraries(filesystem
PRIVATE
    core
)
target_sources(filesystem
PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/sources/directory_watcher/directory_watcher_factory_impl.cpp"
)

add_executable(filesystem_tests)
gtest_discover_tests(filesystem_tests)
target_link_libraries(filesystem_tests
PRIVATE
    GTest::gmock_main
PRIVATE
    core
    filesystem
)
target_sources(filesystem_tests
PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/tests/directory_watcher/directory_watcher_factory_tests.cpp"
)
